# speedtest

./: .gitignore  pyproject.toml
core/: __init__.py  settings.py  urls.py
speedtest/: admin.py  models.py  serializers.py  service.py  tasks.py  urls.py  views.py
speedtest/base/: base_models.py
speedtest/migrations/: 0001_initial.py  0002_rename_imq_download_iqm_rename_imq_upload_iqm.py  0003_speedtest.py
speedtest/services/: graph.py  speedtest_methods.py
speedtest/templates/: base.html  result.html  speedtest_result.html  speedtest_result_detail.html
speedtest/templates/backup/: base.html
templates/: base.html  result.html
